Fix privilege